fix: avoid re-attach if element and chain is the same.

--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -113,6 +113,8 @@
       });
 
       afterEach(() => {
+        outlet.innerHTML = '';
+        callbacksLog = [];
         router.unsubscribe();
       });
 
@@ -853,6 +855,7 @@
 
         beforeEach(async function() {
           router.setRoutes([
+            {path: '/', component: 'div'},
             {path: '/a', action: elementWithAllLifecycleCallbacks('x-a'), children: [
               {path: '/b', action: elementWithAllLifecycleCallbacks('x-b'), children: [
                 {path: '/e', action: elementWithAllLifecycleCallbacks('x-e')}
@@ -861,6 +864,7 @@
             ]},
             {path: '/c', action: elementWithAllLifecycleCallbacks('x-c')}
           ]);
+          await router.ready;
           callbacksLog = [];
         });
 
@@ -1215,6 +1219,103 @@
             'undefined.onAfterEnter'
           ]);
         });
+      });
+
+      it('lifecycle events when reusing element', async() => {
+        const view = document.createElement('x-spy');
+        view.name = 'foo';
+
+        router.setRoutes([
+          {path: '/', component: 'bar'},
+          {path: '/([ab])', action: (ctx) => {
+            callbacksLog.push(`${view.name}.action`);
+            const content = document.createElement('div');
+            view.appendChild(content);
+            // Returns always the same view
+            return view;
+          }},
+        ]);
+        await router.ready;
+
+        await router.render('/a');
+        expect(outlet.children[0]).to.be.equal(view);
+        expect(outlet.children[0].children.length).to.be.equal(1);
+        expect(outlet.children[0].location.pathname).to.be.equal('/a');
+        expect(router.location.pathname).to.be.equal('/a');
+
+        await router.render('/b');
+        // Should reuse the same view
+        expect(outlet.children[0]).to.be.equal(view);
+        // Should not modify the view content
+        expect(outlet.children[0].children.length).to.be.equal(2);
+
+        // Should update locations
+        expect(outlet.children[0].location.pathname).to.be.equal('/b');
+        expect(router.location.pathname).to.be.equal('/b');
+
+        // See #355
+        verifyCallbacks([
+          'foo.action',
+          'foo.onBeforeEnter',
+          'foo.connectedCallback',
+          'foo.onAfterEnter',
+          // always call action of the new route
+          'foo.action'
+          // stop calling any callback if result is the same
+          // stop detaching/re-attaching the element
+        ]);
+      });
+
+      it('lifecycle events when reusing element in different chains', async() => {
+        const view = document.createElement('x-spy');
+        view.name = 'bar';
+        const action = (ctx) => {
+          callbacksLog.push(`${view.name}.action`);
+          // add a new div in each call to check that content is not touched
+          const content = document.createElement('div');
+          view.appendChild(content);
+          // Returns always the same view
+          return view;
+        };
+
+        await router.setRoutes([
+          {path: '/1', component: 'foo1', children: [
+            {path: '/2', component: 'foo2', children: [{
+              path: '/a', action: action
+            }]}
+          ]},
+          {path: '/3', component: 'bar1', children: [
+            {path: '/4', component: 'bar2', children: [{
+              path: '/b', action: action
+            }]}
+          ]}
+        ], true);
+
+        await router.render('/1/2/a');
+        expect(outlet.children[0].tagName.toLowerCase()).to.be.equal('foo1');
+        expect(outlet.children[0].children[0].tagName.toLowerCase()).to.be.equal('foo2');
+        expect(outlet.children[0].children[0].children[0]).to.be.equal(view);
+        expect(outlet.children[0].children[0].children[0].children.length).to.be.equal(1);
+
+        await router.render('/3/4/b');
+        expect(outlet.children[0].tagName.toLowerCase()).to.be.equal('bar1');
+        expect(outlet.children[0].children[0].tagName.toLowerCase()).to.be.equal('bar2');
+        // Should reuse the same view
+        expect(outlet.children[0].children[0].children[0]).to.be.equal(view);
+        // Should not modify the view content
+        expect(outlet.children[0].children[0].children[0].children.length).to.be.equal(2);
+
+        verifyCallbacks([
+          'bar.action',
+          'bar.onBeforeEnter',
+          'bar.connectedCallback',
+          'bar.onAfterEnter',
+          // always call action of the new route
+          'bar.action',
+          // Disconnect and reconnect element but not run any other callback
+          'bar.disconnectedCallback',
+          'bar.connectedCallback'
+        ]);
       });
 
       describe('lifecycle events with async action', () => {
